Resolve SonarCloud findings in workflow-run telemetry slice (#859)
Addresses the 15 new-code issues from the PR analysis: rename the controller
record() handler (S6213); reduce WorkflowPhaseEvent constructor and the private
aggregate helper to <=7 params (S107); a PROJECT_FIELD constant (S1192);
Math.clamp (S6885); collapse applyRunCommand's if-chain with a setIfPresent
helper to cut cognitive complexity (S3776); split the V142 migration probes into
their own test (S5961); and hoist command/filter construction out of
assertThatThrownBy lambdas (S5778). No behaviour change; companion docs/MCP
note the idempotent-upsert + 409 conflict semantics.